--- a/listofsymbols.sty
+++ b/listofsymbols.sty
@@ -20,6 +20,7 @@
 %% original source files, as listed above, are part of the
 %% same distribution. (The sources need not necessarily be
 %% in the same archive or directory.)
+%% Documentation :http://tug.ctan.org/macros/latex/contrib/listofsymbols/listofsymbols.pdf (added by me)
 
 
 
