--- a/mypackages.sty
+++ b/mypackages.sty
@@ -61,3 +61,15 @@
 \if@twocolumn\hbox{}\newpage\fi\fi\fi}
 \makeatother
     
+
+% Line spacing 1.5, accordint ot the UoL guidlines
+\renewcommand{\baselinestretch}{1.} % need to be changed to 1.5
+
+% hyperlinks
+\usepackage{hyperref}
+\hypersetup{pdfborder={0 0 0},
+	colorlinks=true,
+	linkcolor=black,
+	citecolor=black,
+	urlcolor=black}
+\urlstyle{same}
