1st experiemntal campaign in the SPS, first commit

--- a/mypackages.sty
+++ b/mypackages.sty
@@ -73,3 +73,6 @@
 	citecolor=black,
 	urlcolor=black}
 \urlstyle{same}
+
+
+\usepackage{tabularx, booktabs} % extra features for tabular environment
