--- a/references.bib
+++ b/references.bib
@@ -12,3 +12,41 @@
   doi = {10.1103/PhysRevSTAB.18.101001},
   url = {https://link.aps.org/doi/10.1103/PhysRevSTAB.18.101001}
 }
+
+@article{Antoniou:2649815,
+      author        = "Antoniou, Fanouria and Alekou, Androula and Bartosik,
+                       Hannes and Bohl, Thomas and Calaga, Rama and Carver, Lee
+                       and Repond, Joël and Vandoni, Giovanna",
+      title         = "{Emittance Growth in Coast in the SPS at CERN}",
+      journal       = "J. Phys.: Conf. Ser.",
+      reportNumber  = "CERN-ACC-2018-110, 2",
+      volume        = "1067",
+      pages         = "MOPMF061. 7 p",
+      year          = "2018",
+      url           = "https://cds.cern.ch/record/2649815",
+      doi           = "10.18429/JACoW-IPAC2018-MOPMF061",
+}
+
+@article{Carlà:2664976,
+      author        = "Carlà, Michele and Bartosik, Hannes and Beck, Mario and
+                       Li, Kevin and Schenk, Michael",
+      title         = "{Studies of a New Optics With Intermediate Transition
+                       Energy as Alternative for High Intensity LHC Beams in the
+                       CERN SPS}",
+      pages         = "TUPAF022. 4 p",
+      year          = "2018",
+      url           = "https://cds.cern.ch/record/2664976",
+      doi           = "10.18429/JACoW-IPAC2018-TUPAF022",
+}
+
+@article{Alekou:2640326,
+      author        = "Alekou, Androula and Appleby, Robert and Bartosik, Hannes
+                       and Calaga, Rama and Carlà, Michele and Papaphilippou,
+                       Yannis",
+      title         = "{SPS Long Term Stability Studies in the Presence of Crab
+                       Cavities and High Order Multipoles}",
+      pages         = "WEP2PO008. 3 p",
+      year          = "2018",
+      url           = "https://cds.cern.ch/record/2640326",
+      doi           = "10.18429/JACoW-HB2018-WEP2PO008",
+}
