rephrase IPAC paper

--- a/references.bib
+++ b/references.bib
@@ -50,3 +50,13 @@
       url           = "https://cds.cern.ch/record/2640326",
       doi           = "10.18429/JACoW-HB2018-WEP2PO008",
 }
+
+@article{Triantafyllou,
+      author        = "Triantafylou, Natalia",
+      title         = "{INVESTIGATION OF DAMPING EFFECTS OF THE CRAB CAVITY
+NOISE INDUCED EMITTANCE GROWTH}",
+      pages         = "TBA",
+      year          = "2021",
+      url           = "TBA",
+      doi           = "TBA",
+}
