--- a/references.bib
+++ b/references.bib
@@ -13,6 +13,19 @@
   url = {https://link.aps.org/doi/10.1103/PhysRevSTAB.18.101001}
 }
 
+@article{Calaga:1451286,
+      author        = "Calaga, R and Ficcadenti, L and Metral, E and Tomas, R and
+                       Tuckmantel, J and Zimmermann, F",
+      title         = "{Proton-beam emittance growth in SPS coasts}",
+      journal       = "Conf. Proc.",
+      reportNumber  = "EuCARD-CON-2012-011, CERN-ATS-2012-077",
+      volume        = "C1205201",
+      pages         = "THPPP007. 3 p",
+      month         = "May",
+      year          = "2012",
+      url           = "https://cds.cern.ch/record/1451286",
+}
+
 @article{Antoniou:2649815,
       author        = "Antoniou, Fanouria and Alekou, Androula and Bartosik,
                        Hannes and Bohl, Thomas and Calaga, Rama and Carver, Lee
