--- a/mypackages.sty
+++ b/mypackages.sty
@@ -75,4 +75,6 @@
 \urlstyle{same}
 
 
+\usepackage[parfill]{parskip} % new paragraph, skip intend
+
 \usepackage{tabularx, booktabs} % extra features for tabular environment
