--- a/references.bib
+++ b/references.bib
@@ -73,3 +73,45 @@ NOISE INDUCED EMITTANCE GROWTH}",
       url           = "TBA",
       doi           = "TBA",
 }
+
+@article{Zanoni:2017,
+	doi = {10.1088/1742-6596/874/1/012092},
+	url = {https://doi.org/10.1088/1742-6596/874/1/012092},
+	year = 2017,
+	month = {jul},
+	publisher = {{IOP} Publishing},
+	volume = {874},
+	pages = {012092},
+	author = {C. Zanoni and A. Amorim Carvalho and K. Artoos and S. Atieh and K. Brodzinski and R. Calaga and O. Capatina and T. Capelli and F. Carra and L. Dassa and T. Dijoud and K. Eiler and G Favre and P. Freijedo Menendez and M. Garlasch{\`{e}} and L. Giordanino and T. Jones and S. A. E. Langeslag and R. Leuxe and H. Mainaud-Durand and P. Minginette and M. Narduzzi and V. Rude and M. Sosin and J. S. Swieszek and N. Templeton},
+	title = {The crab cavities cryomodule for {SPS} test}
+}
+
+@article{Garlaschè:2648553,
+      author        = "Garlaschè, Marco and Artoos, Kurt and Calaga, Rama and
+                       Capatina, Ofelia and Capelli, Teddy and El Kbiri, Nordine
+                       and Krawczyk, Artur and Lombard, Didier and Marcillac,
+                       Pierre-Francois and Minginette, Pierre and Narduzzi,
+                       Manuele and Prochal, Boguslaw and Renaglia, Lucas and Roch,
+                       Jonas and Swieszek, Joanna",
+      title         = "{Assembly of the DQW Crab Cavity Cryomodule for SPS Test}",
+      reportNumber  = "CERN-ACC-2018-136",
+      pages         = "WEPMF078. 4 p",
+      year          = "2018",
+      url           = "https://cds.cern.ch/record/2648553",
+      doi           = "10.18429/JACoW-IPAC2018-WEPMF078",
+}
+
+@article{Carver:2696108,
+      author        = "Carver, Lee and Alekou, Androula and Antoniou, Fanouria
+                       and Appleby, Robert and Bartosik, Hannes and Bohl, Thomas
+                       and Burt, Graeme and Calaga, Rama and Carlà, Michele and
+                       Levens, Thomas and Mitchell, James and Papotti, Giulia and
+                       Welsch, Carsten",
+      title         = "{First machine development results with HL-LHC crab
+                       cavities in the SPS. First machine developments result with
+                       HL-LHC crab cavities in the SPS}",
+      pages         = "MOPGW094. 4 p",
+      year          = "2019",
+      url           = "https://cds.cern.ch/record/2696108",
+      doi           = "10.18429/JACoW-IPAC2019-MOPGW094",
+}
