1st part 5Nov2021

--- a/references.bib
+++ b/references.bib
@@ -115,3 +115,13 @@ NOISE INDUCED EMITTANCE GROWTH}",
       url           = "https://cds.cern.ch/record/2696108",
       doi           = "10.18429/JACoW-IPAC2019-MOPGW094",
 }
+
+@INPROCEEDINGS{Jones:987561,
+  author={Jones, R. and Schmickler, H.},
+  booktitle={PACS2001. Proceedings of the 2001 Particle Accelerator Conference (Cat. No.01CH37268)}, 
+  title={The measurement of Q' and Q" in the CERN-SPS by head-tail phase shift analysis}, 
+  year={2001},
+  volume={1},
+  number={},
+  pages={531-533 vol.1},
+  doi={10.1109/PAC.2001.987561}}
