--- a/references.bib
+++ b/references.bib
@@ -125,3 +125,15 @@ NOISE INDUCED EMITTANCE GROWTH}",
   number={},
   pages={531-533 vol.1},
   doi={10.1109/PAC.2001.987561}}
+
+  @book{Chao:1490001,
+      author        = "Chao, Alexander Wu and Mess, Karl Hubert and Tigner, Maury
+                       and Zimmermann, Frank",
+      title         = "{Handbook of accelerator physics and engineering; 2nd
+                       ed.}",
+      publisher     = "World Scientific",
+      address       = "Singapore",
+      year          = "2013",
+      url           = "https://cds.cern.ch/record/1490001",
+      doi           = "10.1142/8543",
+}
