--- a/references.bib
+++ b/references.bib
@@ -137,3 +137,13 @@ NOISE INDUCED EMITTANCE GROWTH}",
       url           = "https://cds.cern.ch/record/1490001",
       doi           = "10.1142/8543",
 }
+
+@article{Levens:2313358,
+      author        = "Levens, Thomas and Łasocha, Kacper and Lefèvre, Thibaut",
+      title         = "{Recent Developments for Instability Monitoring at the
+                       LHC}",
+      pages         = "THAL02. 4 p",
+      year          = "2017",
+      url           = "https://cds.cern.ch/record/2313358",
+      doi           = "10.18429/JACoW-IBIC2016-THAL02",
+}
