--- a/mypackages.sty
+++ b/mypackages.sty
@@ -63,7 +63,7 @@
     
 
 % Line spacing 1.5, accordint ot the UoL guidlines
-\renewcommand{\baselinestretch}{1.} % need to be changed to 1.5
+\renewcommand{\baselinestretch}{1.5} % need to be changed to 1.5
 
 % hyperlinks
 \usepackage{hyperref}
