--- a/references.bib
+++ b/references.bib
@@ -147,3 +147,18 @@ NOISE INDUCED EMITTANCE GROWTH}",
       url           = "https://cds.cern.ch/record/2313358",
       doi           = "10.18429/JACoW-IBIC2016-THAL02",
 }
+
+@article{PhysRevAccelBeams.22.112803,
+  title = {Automatic detection of transverse beam instabilities in the Large Hadron Collider},
+  author = {Levens, T. E. and \L{}asocha, K. and Lefevre, T. and G\k{a}sior, M. and Jones, R. and W\l{}ostowski, T. and Ellis, J. P. and Steinhagen, R. J.},
+  journal = {Phys. Rev. Accel. Beams},
+  volume = {22},
+  issue = {11},
+  pages = {112803},
+  numpages = {12},
+  year = {2019},
+  month = {Nov},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevAccelBeams.22.112803},
+  url = {https://link.aps.org/doi/10.1103/PhysRevAccelBeams.22.112803}
+}
