git before change of chapter

--- a/main.tex
+++ b/main.tex
@@ -45,17 +45,20 @@
 \chapter{Theory of Crab Cavity noise induced emittance growth}
 \input{chapters/chapter03}
 
-\chapter{First experimental campaign in the SPS}
+\chapter{First experimental campaign with Crab Cavities in the SPS: Diagnostics}
 \input{chapters/chapter04}
 
-\chapter{Investigation of the discrepancy}
+\chapter{First experimental campaign with Crab Cavities in the SPS: Emittance growth}
 \input{chapters/chapter05}
 
-\chapter{Simple model of describing the decoherence suppression from impedance}
+\chapter{Investigation of the discrepancy}
 \input{chapters/chapter06}
 
-\chapter{Application and impact for HL-LHC}
+\chapter{Simple model of describing the decoherence suppression from impedance}
 \input{chapters/chapter07}
+
+\chapter{Application and impact for HL-LHC}
+\input{chapters/chapter08}
 
 \chapter{Conclusion}
 \input{chapters/conclusion}
