--- a/main.tex
+++ b/main.tex
@@ -45,7 +45,7 @@
 \chapter{Theory of Crab Cavity noise induced emittance growth}
 \input{chapters/chapter03}
 
-\chapter{First experimental campaign with Crab Cavities in the SPS: Diagnostics}
+\chapter{First experimental results with Crab Cavities in the SPS}
 \input{chapters/chapter04}
 
 \chapter{First experimental campaign with Crab Cavities in the SPS: Emittance growth}
