--- a/references.bib
+++ b/references.bib
@@ -86,19 +86,15 @@ NOISE INDUCED EMITTANCE GROWTH}",
 	title = {The crab cavities cryomodule for {SPS} test}
 }
 
-@article{Garlaschè:2648553,
-      author        = "Garlaschè, Marco and Artoos, Kurt and Calaga, Rama and
-                       Capatina, Ofelia and Capelli, Teddy and El Kbiri, Nordine
-                       and Krawczyk, Artur and Lombard, Didier and Marcillac,
-                       Pierre-Francois and Minginette, Pierre and Narduzzi,
-                       Manuele and Prochal, Boguslaw and Renaglia, Lucas and Roch,
-                       Jonas and Swieszek, Joanna",
-      title         = "{Assembly of the DQW Crab Cavity Cryomodule for SPS Test}",
-      reportNumber  = "CERN-ACC-2018-136",
-      pages         = "WEPMF078. 4 p",
+@article{Calaga:2649807,
+      author        = "Calaga, Rama and Capatina, Ofelia and Vandoni, Giovanna",
+      title         = "{The SPS Tests of the HL-LHC Crab Cavities}",
+      reportNumber  = "CERN-ACC-2018-118",
+      pages         = "TUPAF057. 4 p",
       year          = "2018",
-      url           = "https://cds.cern.ch/record/2648553",
-      doi           = "10.18429/JACoW-IPAC2018-WEPMF078",
+      url           = "https://cds.cern.ch/record/2649807",
+      doi           = "10.18429/JACoW-IPAC2018-TUPAF057",
+}
 }
 
 @article{Carver:2696108,
