Ch4 - Section 1 complete

--- a/mypackages.sty
+++ b/mypackages.sty
@@ -78,3 +78,6 @@
 \usepackage[parfill]{parskip} % new paragraph, skip intend
 
 \usepackage{tabularx, booktabs} % extra features for tabular environment
+\usepackage{tabu} % customizing tabu (for multicolumns)
+\usepackage[table]{xcolor} % midrule color
+\usepackage{booktabs} % midrule color
