--- a/references.bib
+++ b/references.bib
@@ -158,3 +158,13 @@ NOISE INDUCED EMITTANCE GROWTH}",
   doi = {10.1103/PhysRevAccelBeams.22.112803},
   url = {https://link.aps.org/doi/10.1103/PhysRevAccelBeams.22.112803}
 }
+
+
+
+@misc{BE_seminar,
+  title = {First proton beam dynamics results with crab cavities},
+  author = {Carver Lee},
+  url  =  {https://indico.cern.ch/event/800428/attachments/1804664/2945632/CrabCavity_BE_Seminar.pdf},
+  note = {Accessed: 10-11-2021},
+}
+
