one before last push for ch4

--- a/main.tex
+++ b/main.tex
@@ -45,10 +45,10 @@
 \chapter{Theory of Crab Cavity noise induced emittance growth}
 \input{chapters/chapter03}
 
-\chapter{First experimental results with Crab Cavities in the SPS}
+\chapter{First experimental studies with Crab Cavities in the SPS}
 \input{chapters/chapter04}
 
-\chapter{First experimental campaign with Crab Cavities in the SPS: Emittance growth}
+\chapter{Emittance growth measurements with Crab Cavity noise in 2018}
 \input{chapters/chapter05}
 
 \chapter{Investigation of the discrepancy}
