--- a/references.bib
+++ b/references.bib
@@ -168,3 +168,25 @@ NOISE INDUCED EMITTANCE GROWTH}",
   note = {Accessed: 10-11-2021},
 }
 
+@misc{HT_calibration_2018,
+  title = {Beam instrumentation with SPS Crabs},
+  author = {Tom Levens},
+  url  =  {https://indico.cern.ch/event/718127/contributions/2951309/attachments/1646050/2630808/BI_SPS_Crabs.pdf},
+  note = {Accessed: 11-11-2021},
+}
+
+@misc{CC_rephasing_RF,
+  title = {SPS Crab Cavity test RF Test Program},
+  author = {Philippe Baudrenghien},
+  url  =  {
+https://indico.cern.ch/event/718127/contributions/2951305/attachments/1645650/2629988/SPSCCtestv3.pdf},
+  note = {Accessed: 11-11-2021},
+}
+
+@misc{Rama_Paris_persentation,
+  title = {SPS Crab Cavity test RF Test Program},
+  author = {Rama Calaga},
+  url  =  {https://indico.cern.ch/event/718127/contributions/2951305/attachments/1645650/2629988/SPSCCtestv3.pdf},
+  note = {Accessed: 11-11-2021},
+}
+
