--- a/main.tex
+++ b/main.tex
@@ -45,7 +45,7 @@
 \chapter{Theory of Crab Cavity noise induced emittance growth}
 \input{chapters/chapter03}
 
-\chapter{First experimental studies with Crab Cavities in the SPS}
+\chapter{Experimental studies 2018: Operational setup and beam instrumentation}
 \input{chapters/chapter04}
 
 \chapter{Emittance growth measurements with Crab Cavity noise in 2018}
