--- a/mypackages.sty
+++ b/mypackages.sty
@@ -17,14 +17,10 @@
 \pagestyle{fancy}
 \fancyhf{}
 
-\renewcommand{\chaptermark}[1]{\markboth{#1}{}}
+\renewcommand{\chaptermark}[1]{\markboth{#1}{}} % remove the word "chapter" from header
 \setlength{\headheight}{15pt} 
-%\fancyhead[LE]{\textbf{\nouppercase{\leftmark}}}
-%\fancyhead[LE]{\textbf{\nouppercase{\newlinetospace{{\leftmark}}\quad\thechapter}}}
 \fancyhead[LE]{\textbf{\nouppercase{\thechapter. \leftmark }}}
-
 \fancyhead[RO]{\textbf{\nouppercase{\rightmark}}}
-%\fancyfoot[CE,CO]{\leftmark}
 \fancyfoot[LE,RO]{\thepage}
 
 
