finalize HT monitor section (but the diagram of it

--- a/mypackages.sty
+++ b/mypackages.sty
@@ -98,3 +98,6 @@
 \titleformat*{\section}{\Large\bfseries}
 \titleformat*{\subsection}{\large\bfseries}
 \makeatother
+
+\usepackage{caption}
+\usepackage{subcaption}
