sketch of sps rotational ws

--- a/references.bib
+++ b/references.bib
@@ -190,3 +190,40 @@ https://indico.cern.ch/event/718127/contributions/2951305/attachments/1645650/26
   note = {Accessed: 11-11-2021},
 }
 
+@article{BOSSER1985475,
+title = {Transverse emittance measurement with a rapid wire scanner at the CERN SPS},
+journal = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+volume = {235},
+number = {3},
+pages = {475-480},
+year = {1985},
+issn = {0168-9002},
+doi = {https://doi.org/10.1016/0168-9002(85)90096-8},
+url = {https://www.sciencedirect.com/science/article/pii/0168900285900968},
+author = {J. Bosser and J. Camas and L. Evans and G. Ferioli and R. Hopkins and J. Mann and O. Olsen},
+}
+
+@techreport{Berrig:1972478,
+      author        = "Berrig, OE and Caspers, F and Dehning, B and Emery, J and
+                       Hamani, M and Kuczerowski, J and Piselli, E and Salvant, B
+                       and Sautier, R and Veness, R and Vollinger, C and Vuitton,
+                       C and Zannini, C",
+      title         = "{CERN-SPS Wire Scanner Impedance and Wire Heating
+                       Studies}",
+      institution   = "CERN",
+      address       = "Geneva",
+      reportNumber  = "CERN-BE-2014-006",
+      month         = "Sep",
+      year          = "2014",
+      url           = "https://cds.cern.ch/record/1972478",
+}
+
+@article{Dehning:895164,
+      author        = "Dehning, B and Fischer, C and Koopman, J and Roncarolo, F",
+      title         = "{Accuracy of the SPS transverse emittance monitors}",
+      reportNumber  = "CERN-AB-2005-081",
+      pages         = "3 p",
+      month         = "Apr",
+      year          = "2005",
+      url           = "https://cds.cern.ch/record/895164",
+}
