update WS profiles and elaborate on emittance growth from ws

--- a/references.bib
+++ b/references.bib
@@ -227,3 +227,12 @@ author = {J. Bosser and J. Camas and L. Evans and G. Ferioli and R. Hopkins and 
       year          = "2005",
       url           = "https://cds.cern.ch/record/895164",
 }
+
+@thesis{Roncarolo:1481835,
+      author        = "Roncarolo, Federico",
+      title         = "{Accuracy of the Transverse Emittance Measurements of the
+                       CERN Large Hadron Collider}",
+      year          = "2005",
+      url           = "https://cds.cern.ch/record/1481835",
+      note          = "Presented 2005",
+}
