modify introduction of Ch4

--- a/main.tex
+++ b/main.tex
@@ -43,7 +43,7 @@
 \chapter{Basics of accelerator beam dynamics}
 \input{chapters/chapter02}
 
-\chapter{Theory of Crab Cavity noise induced emittance growth}
+\chapter{Theory of Crab Cavity noise induced emittance growth}\label{Ch:CC_noise_theory}
 \input{chapters/chapter03}
 
 \chapter{Experimental studies 2018: Operational setup and beam instrumentation}
