identify optimal parametes for MD

--- a/references.bib
+++ b/references.bib
@@ -178,8 +178,7 @@ NOISE INDUCED EMITTANCE GROWTH}",
 @misc{CC_rephasing_RF,
   title = {SPS Crab Cavity test RF Test Program},
   author = {Philippe Baudrenghien},
-  url  =  {
-https://indico.cern.ch/event/718127/contributions/2951305/attachments/1645650/2629988/SPSCCtestv3.pdf},
+  url  =  {https://indico.cern.ch/event/718127/contributions/2951305/attachments/1645650/2629988/SPSCCtestv3.pdf},
   note = {Accessed: 11-11-2021},
 }
 
@@ -235,4 +234,38 @@ author = {J. Bosser and J. Camas and L. Evans and G. Ferioli and R. Hopkins and 
       year          = "2005",
       url           = "https://cds.cern.ch/record/1481835",
       note          = "Presented 2005",
+}
+
+@article{Calaga:1451286,
+      author        = "Calaga, R and Ficcadenti, L and Metral, E and Tomas, R and
+                       Tuckmantel, J and Zimmermann, F",
+      title         = "{Proton-beam emittance growth in SPS coasts}",
+      journal       = "Conf. Proc.",
+      reportNumber  = "EuCARD-CON-2012-011, CERN-ATS-2012-077",
+      volume        = "C1205201",
+      pages         = "THPPP007. 3 p",
+      month         = "May",
+      year          = "2012",
+      url           = "https://cds.cern.ch/record/1451286",
+}
+
+@misc{Alekou_CC_coast_prep_2016,
+  title = {Emittance growth in coast in the SPS},
+  author = {Alekou, A and Antoniou, F and Bartosik, H and Calaga, R},
+  url  =  {https://indico.cern.ch/event/609486/contributions/2457542/attachments/1433340/2318716/EmittanceEvolutionCoastSPS_2017_April.pdf},
+  note = {Accessed: 26-11-2021},
+}
+
+@article{Antoniou:2649815,
+      author        = "Antoniou, Fanouria and Alekou, Androula and Bartosik,
+                       Hannes and Bohl, Thomas and Calaga, Rama and Carver, Lee
+                       and Repond, Joël and Vandoni, Giovanna",
+      title         = "{Emittance Growth in Coast in the SPS at CERN}",
+      journal       = "J. Phys.: Conf. Ser.",
+      reportNumber  = "CERN-ACC-2018-110, 2",
+      volume        = "1067",
+      pages         = "MOPMF061. 7 p",
+      year          = "2018",
+      url           = "https://cds.cern.ch/record/2649815",
+      doi           = "10.18429/JACoW-IPAC2018-MOPMF061",
 }
