--- a/references.bib
+++ b/references.bib
@@ -269,3 +269,20 @@ author = {J. Bosser and J. Camas and L. Evans and G. Ferioli and R. Hopkins and 
       url           = "https://cds.cern.ch/record/2649815",
       doi           = "10.18429/JACoW-IPAC2018-MOPMF061",
 }
+
+@misc{ABWLM,
+  title = {Online bunch length measurement for SPS OP},
+  author = {G. Papotti, F. Follin},
+  url  =  {https://indico.cern.ch/event/774525/contributions/3218683/attachments/1756129/2847423/20181120_LIUSPSBD.pdf},
+  note = {Accessed: 26-11-2021},
+}
+
+@article{Papotti:1124099,
+      author        = "Papotti, G",
+      title         = "{A Beam Quality Monitor for LHC Beams in the SPS}",
+      reportNumber  = "LHC-PROJECT-Report-1154, CERN-LHC-PROJECT-Report-1154",
+      pages         = "4 p",
+      month         = "Sep",
+      year          = "2008",
+      url           = "https://cds.cern.ch/record/1124099",
+}
