small change in Ch4 regarding the bunch spacing

--- a/main.tex
+++ b/main.tex
@@ -49,7 +49,7 @@
 \chapter{Experimental studies 2018: Operational setup and beam instrumentation}
 \input{chapters/chapter04}
 
-\chapter{Emittance growth measurements with Crab Cavity noise in 2018}
+\chapter{Experimental studies 2018: Measurements and analysis}
 \input{chapters/chapter05}
 
 \chapter{Investigation of the discrepancy}
