update the machine configuration

--- a/main.tex
+++ b/main.tex
@@ -46,10 +46,10 @@
 \chapter{Theory of Crab Cavity noise induced emittance growth}\label{Ch:CC_noise_theory}
 \input{chapters/chapter03}
 
-\chapter{Experimental studies 2018: Operational setup and beam instrumentation}
+\chapter{Experimental studies 2018: Operational setup and beam instrumentation}\label{Ch:2018_setup}
 \input{chapters/chapter04}
 
-\chapter{Experimental studies 2018: Measurements and analysis}
+\chapter{Experimental studies 2018: Measurements and analysis}\label{Ch:2018_analyisis}
 \input{chapters/chapter05}
 
 \chapter{Investigation of the discrepancy}
