add figures for example noise spectra

--- a/references.bib
+++ b/references.bib
@@ -286,3 +286,13 @@ author = {J. Bosser and J. Camas and L. Evans and G. Ferioli and R. Hopkins and 
       year          = "2008",
       url           = "https://cds.cern.ch/record/1124099",
 }
+
+@manual{E5052B_insight,
+      title  = "Phase Noise Measurement Methods
+and Techniques",
+      author = "K.~Gheen",
+      url    = "https://studylib.net/doc/18034081/phase-noise-measurements",
+      %year   = "2020",
+      publisher = "Agilent Technologies",
+      note="Accessed November 5, 2020"
+      }
