add formulas for the theoretical prediction from AN and PN

--- a/references.bib
+++ b/references.bib
@@ -296,3 +296,14 @@ and Techniques",
       publisher = "Agilent Technologies",
       note="Accessed November 5, 2020"
       }
+
+@book{b_papoulis1991probability,
+  title={Probability, Random Variables, and Stochastic Processes},
+  author={Papoulis, A.},
+  isbn={9780070484771},
+  lccn={lc90023127},
+  series={Communications and Signal Processing},
+  url={https://books.google.ch/books?id=4IwQAQAAIAAJ},
+  year={1991},
+  publisher={McGraw-Hill}
+}
