mention the relation between the measured spectra and the mathematical definitions

--- a/references.bib
+++ b/references.bib
@@ -307,3 +307,14 @@ and Techniques",
   year={1991},
   publisher={McGraw-Hill}
 }
+
+@ARTICLE{IEEE:4797525,
+  author={},
+  journal={IEEE Std Std 1139-2008}, 
+  title={IEEE Standard Definitions of Physical Quantities for Fundamental Frequency and Time Metrology---Random Instabilities}, 
+  year={2009},
+  volume={},
+  number={},
+  pages={c1-35},
+  doi={10.1109/IEEESTD.2008.4797525}
+  }
