indicate which is the element at the start of the lattice

--- a/references.bib
+++ b/references.bib
@@ -318,3 +318,14 @@ and Techniques",
   pages={c1-35},
   doi={10.1109/IEEESTD.2008.4797525}
   }
+
+  @article{Baudrenghien:1520896,
+      author        = "Baudrenghien, P  and Brodzinski, K  and Calaga, R  and
+                       Capatina, O  and Jensen, E  and Macpherson, A and
+                       Montesinos, E  and Parma, V",
+      title         = "{Functional Specifications of the LHC Prototype Crab
+                       Cavity System}",
+      month         = "Feb",
+      year          = "2013",
+      url           = "https://cds.cern.ch/record/1520896",
+}
