--- a/main.tex
+++ b/main.tex
@@ -65,9 +65,12 @@
 \input{chapters/conclusion}
 
 % The end matter
+\printglossaries
 \appendix
 \chapter{Appendix Title}
-\input{chapters/appendix}
+\input{appendix/appendix}
+\chapter{Glossary}
+\input{appendix/glossary}
 
 \backmatter
 \printbibliography
