Fit gaussian function, least square and covariance matrix

--- a/references.bib
+++ b/references.bib
@@ -329,3 +329,21 @@ and Techniques",
       year          = "2013",
       url           = "https://cds.cern.ch/record/1520896",
 }
+
+@misc{gaus_fit_least_squares,
+  title = {Fitting Models to Data,
+Generalized Linear Least Squares, and Error Analysis},
+  author = {Henri P. Gavin},
+  note  =  {\url{https://people.duke.edu/~hpgavin/SystemID/CourseNotes/linear-least-squres.pdf}},
+  note = {Accessed: 16-2-2022},
+}
+
+@misc{scipy_curve_fit,
+  title = {SciPy API Documentation},
+  author = {},
+  note  =  {\url{https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.curve_fit.html}},
+  note = {Accessed: 16-2-2022},
+}
+
+
+
