first commit on beta-beating for the errors on beta function

--- a/references.bib
+++ b/references.bib
@@ -345,5 +345,13 @@ Generalized Linear Least Squares, and Error Analysis},
   note = {Accessed: 16-2-2022},
 }
 
-
+@inproceedings{SPS-beta-beating-Rogelio,
+author = {Tomas, Rogelio and Arduini, G. and Rumolo, G. and Zimmermann, Frank and Angeles, Faus-Golfe},
+year = {2007},
+month = {07},
+pages = {4231 - 4233},
+title = {Improved algorithms to determine the non-linear optics model of the SPS from non-linear chromaticity},
+isbn = {978-1-4244-0916-7},
+doi = {10.1109/PAC.2007.4439986}
+}
 
