add note in the introduction that the optic parameters refer to the model values

--- a/references.bib
+++ b/references.bib
@@ -334,14 +334,13 @@ and Techniques",
   title = {Fitting Models to Data,
 Generalized Linear Least Squares, and Error Analysis},
   author = {Henri P. Gavin},
-  note  =  {\url{https://people.duke.edu/~hpgavin/SystemID/CourseNotes/linear-least-squres.pdf}},
+  url  =  {https://people.duke.edu/~hpgavin/SystemID/CourseNotes/linear-least-squres.pdf},
   note = {Accessed: 16-2-2022},
 }
 
 @misc{scipy_curve_fit,
   title = {SciPy API Documentation},
-  author = {},
-  note  =  {\url{https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.curve_fit.html}},
+  url  =  {https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.curve_fit.html},
   note = {Accessed: 16-2-2022},
 }
 
@@ -354,4 +353,12 @@ title = {Improved algorithms to determine the non-linear optics model of the SPS
 isbn = {978-1-4244-0916-7},
 doi = {10.1109/PAC.2007.4439986}
 }
+
+@misc{SPS_optics_repo,
+  title = {Official optics repository of the CERN Super Proton Synchrotron (official name SPS)},
+  url  =  {https://gitlab.cern.ch/acc-models/acc-models-sps/-/tree/2021/},
+  note = {Accessed: 16-2-2022},
+}
+
+
 
