update section for crab cavity installation and parameters

--- a/main.tex
+++ b/main.tex
@@ -46,20 +46,23 @@
 \chapter{Theory of Crab Cavity noise induced emittance growth}\label{Ch:CC_noise_theory}
 \input{chapters/chapter03}
 
-\chapter{Experimental studies 2018: Operational setup and beam instrumentation}\label{Ch:2018_setup}
+\chapter{Calibration of the Crab Cavities for the SPS tests in 2018}\label{Ch:CC_set_up}
 \input{chapters/chapter04}
 
-\chapter{Experimental studies 2018: Measurements and analysis}\label{Ch:2018_analyisis}
+\chapter{Experimental studies 2018: Operational setup and beam instrumentation}\label{Ch:2018_setup}
 \input{chapters/chapter05}
 
-\chapter{Investigation of the discrepancy}
+\chapter{Experimental studies 2018: Measurements and analysis}\label{Ch:2018_analyisis}
 \input{chapters/chapter06}
 
-\chapter{Simple model of describing the decoherence suppression from impedance}
+\chapter{Investigation of the discrepancy}
 \input{chapters/chapter07}
 
-\chapter{Application and impact for HL-LHC}
+\chapter{Simple model of describing the decoherence suppression from impedance}
 \input{chapters/chapter08}
+
+\chapter{Application and impact for HL-LHC}
+\input{chapters/chapter09}
 
 \chapter{Conclusion}
 \input{chapters/conclusion}
