first commit for the dependence of the CC voltage on the phase

--- a/main.tex
+++ b/main.tex
@@ -49,10 +49,10 @@
 \chapter{Calibration of the Crab Cavities for the SPS tests in 2018}\label{Ch:CC_set_up}
 \input{chapters/chapter04}
 
-\chapter{Experimental studies 2018: Operational setup and beam instrumentation}\label{Ch:2018_setup}
+\chapter{Emittance growth studies 2018: Operational setup and beam instrumentation}\label{Ch:2018_setup}
 \input{chapters/chapter05}
 
-\chapter{Experimental studies 2018: Measurements and analysis}\label{Ch:2018_analyisis}
+\chapter{Emittance growth studies 2018: Measurements and analysis}\label{Ch:2018_analyisis}
 \input{chapters/chapter06}
 
 \chapter{Investigation of the discrepancy}
