commit before writing the error of the fit

--- a/appendix/appendix.tex
+++ b/appendix/appendix.tex
@@ -10,26 +10,8 @@ Suppose that we have $N$ data points ($x_{i}, y_{i}$) and that $y=f(x,\alpha, \b
     \chi^2 = \sum_{i=1}^{N}[y_{i}-f(x_{i},\alpha, \beta)]^2,
 \end{equation}
 
-where $y_{i}$ is the observed value and $f(x_{i},\alpha, \beta)$ the exepcted value from the model. In other words, $\chi^2$ is a measure of deviation between the measurement and the expected result and thus its minimisation results to the best fit.
+where $y_{i}$ is the observed value and $f(x_{i},\alpha, \beta)$ the exepcted value from the model. In other words, $\chi^2$ is a measure of deviation between the measurement and the expected result and thus its minimisation results to the best fit i.e. to the optimal parameters $\alpha, \beta$.
 
-
-
-from the data points. The process to obtain $\alpha$ and $\beta$ is to minimise the following expression with respect to $\alpha, \beta$.
-
-
-1. chi square expression
-2. chi square is a measure of deviation between the measurement and the expected value. The smaller the chi square the better the fit.
-
-
-
-The best fit is obtained
-
-In order to find the best fit, 
-
-
-Why do we fit the measured data?
-
-The fitting procedure of a data set in this thesis follows the widely used method of least squares. 
 
 
 
