least squares fitting final

--- a/references.bib
+++ b/references.bib
@@ -338,6 +338,13 @@ Generalized Linear Least Squares, and Error Analysis},
   note = {Accessed: 16-2-2022},
 }
 
+@misc{least_square_minimisation,
+  title = {Chi Square Distribution ($\chi^2$) and Least Squares fitting},
+  author = {K. K. Gan},
+  url  =  {https://www.asc.ohio-state.edu/gan.1/teaching/spring04/Chapter6.pdf},
+  note = {Accessed: 03-03-2022},
+}
+
 @misc{scipy_curve_fit,
   title = {SciPy API Documentation},
   url  =  {https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.curve_fit.html},
