--- a/appendix/appendix.tex
+++ b/appendix/appendix.tex
@@ -3,27 +3,26 @@ https://www.physics.upenn.edu/sites/default/files/Managing%20Errors%20and%20Unce
 
 
 \section{Least squares fitting}\label{app:non_linear_fitting}
-In sciences many quantities can not be measured directly, but can be inferred from measured data by fitting a model function to them. Common examples of model functions are the gaussian, the polynomial or the sinusoidal function. The fitting procedure followed in this thesis is called "least squares" and is described below based on Ref []
+In sciences, many quantities can not be measured directly but can be inferred from measured data by fitting a model function to them. Common model functions are the Gaussian, polynomial, or sinusoidal. The fitting procedure followed in this thesis is called "least squares" and is described below based on Ref.~\cite{least_square_minimisation}.
 
 Suppose that we have $N$ data points ($x_{i}, y_{i}$) and that $y=f(x,\alpha, \beta)$ is the model function that describes the relationship between the points. The objective of the fit is to determine the optimal parameters $\alpha, \beta$ such as the model function describes best the data points. This is done by minimising the $\chi^2$ statistics with respect to $\alpha$ and $\beta$:
 \begin{equation}\label{eq:chi_square}
     \chi^2 = \sum_{i=1}^{N}[y_{i}-f(x_{i},\alpha, \beta)]^2,
 \end{equation}
 
-where $y_{i}$ is the observed value and $f(x_{i},\alpha, \beta)$ the exepcted value from the model. In other words, $\chi^2$ is a measure of deviation between the measurement and the expected result and thus its minimisation results to the best fit i.e. to the optimal parameters $\alpha, \beta$.
-
-
+where $y_{i}$ is the observed value and $f(x_{i},\alpha, \beta)$ the expected value from the model. In other words, $\chi^2$ is a measure of deviation between the measurement and the expected result, and thus its minimisation results in the best fit i.e.\ to the optimal parameters $\alpha, \beta$.
 
 
 \normalsize{\textbf{Error of the fit}}\\
-The method of least squares is a widel
+The standard deviation of the fit results, $\alpha, \beta$ is estimated by the square root of the diagonal of their covariant matrix:
 
-This Section describes the procedure that is followed in this thesis to fit the measured data to a model. 
+\begin{equation}\label{eq:cov_matrix_fit_results}
+    \begin{pmatrix}
+        \sigma_{\alpha}^2 & \mathrm{Cov(\alpha, \beta)}\\
+        \mathrm{Cov(\beta, \alpha)} & \sigma_{\beta}^2
+        \end{pmatrix}
+\end{equation}
 
+In this thesis, the uncertainties of the fit results, $\Delta \alpha, \Delta \beta$, are defined as the standard deviation of the corresponding optimal parameters, $\sigma_{\alpha}$ and  $\sigma_{\beta}$ respectively.
 
-
-In this thesis, the standard procedure of fitting measured data to a model is followed~\cite{gaus_fit_least_squares}. 
-This scection describes the procedure followed in t
-
-
-the fitting procedure
+The values of the optimal parameters and their covariance matrix are computed in this thesis using the $\mathrm{scipy.curve \_ fit}$~\cite{scipy_curve_fit} function of the Python programming language.
