add date-time of the HT data on section 4.3

--- a/appendix/appendix.tex
+++ b/appendix/appendix.tex
@@ -14,7 +14,7 @@ where $y_{i}$ is the observed value and $f(x_{i},\alpha, \beta)$ the expected va
 
 
 \normalsize{\textbf{Error of the fit}}\\
-The standard deviation of the fit results, $\alpha, \beta$ is estimated by the square root of the diagonal of their covariant matrix:
+The standard deviation of the fit results, $\sigma \alpha, \sigma \beta$ is estimated by the square root of the diagonal of their covariant matrix:
 
 \begin{equation}\label{eq:cov_matrix_fit_results}
     \begin{pmatrix}
