initial commit for  the introduction of chapter 4

--- a/references.bib
+++ b/references.bib
@@ -64,14 +64,13 @@
       doi           = "10.18429/JACoW-HB2018-WEP2PO008",
 }
 
-@article{Triantafyllou,
-      author        = "Triantafylou, Natalia",
-      title         = "{INVESTIGATION OF DAMPING EFFECTS OF THE CRAB CAVITY
-NOISE INDUCED EMITTANCE GROWTH}",
-      pages         = "TBA",
-      year          = "2021",
-      url           = "TBA",
-      doi           = "TBA",
+@inproceedings{Triantafyllou:2021khx,
+    author = "Triantafyllou, Natalia and Antoniou, Fanouria and Bartosik, Hannes and Baudrenghien, Philippe and Buffat, Xavier and Calaga, Rama and Carver, Lee and Mastoridis, Themis and Papaphilippou, Yannis and Wolski, Andrzej",
+    title = "{Investigation of Damping Effects of the Crab Cavity Noise Induced Emittance Growth}",
+    booktitle = "{12th International Particle Accelerator Conference~}",
+    doi = "10.18429/JACoW-IPAC2021-TUPAB256",
+    month = "8",
+    year = "2021"
 }
 
 @article{Zanoni:2017,
